Moved java libraries into a single folder